# backtest_ib_trade

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  readme.md  requirements.txt  requirements_lint.txt
src/broker/: InteractiveBrokers.py  base.py  ibbroker.py  schwab.py  types.py
src/example/: backtrader_example.py  get_yfinance_data_example.py  ib_trade_example.py
src/grabber/: Schwab.py  YahooFinance.py  base.py
src/model/: broker.py  data_grabber.py  models.py  strategy.py  trader.py
src/strategy/: MomentWilliamsR.py  base.py  momentum_williamsR.py
src/trader/: base.py  intradayTrader.py
src/utils/: google_operator.py  tachnical_analysis.py  yfinance_helper.py
